GrammarOrthodox
//////////////////////////////////////////////////////////////////////////////////////////////////////
///// Grammar For ORthodox //////////// Grammar For ORthodox //////////// Grammar For ORthodox ///////
//////////////////////////////////////////////////////////////////////////////////////////////////////

-- program ----------------------->

program    ->  [ struct-def | enum-def | function-def ]*

--------------------------------end



-- block, expressions, literals ------>

block       -> "{" [ ASSIGNMENT | VAR_UPDATE  | stmt ]* "}"

expr        -> literals op-expr | op-expr | fn_call expr | break_expr  | return_expr  | grouped_expr | NULL

stmt         -> if_stmt | for_stmt
if_stmt      -> "if" expr  "{" block "}" [ "elif" expr "{" block "}"]* [ "else" "{" block "}"]
for_stmt     -> "for" IDENTIFIER "in" expr ":" expr  "{" block "}"

op-expr      -> OPERATOR expr
fn_call      -> IDENTIFIER "(" [ expr ","? ]* ")"
break_expr   -> "break" expr
return_expr  -> "return" expr
grouped_expr -> "(" expr ")"

literals    -> number | string | IDENTIFIER | member_access | array_access

member_access ->  IDENTIFIER [ "." IDENTIFIER ]+

------------------------------------end



-- top-lvl records && function definitions ----->

struct-def   ->  IDENTIFIER "::" "struct" "=" "{" [ IDENTIFIER "::" TYPE ]* "}"
enum-def     ->  IDENTIFIER "::" "enum" "=" "{" [ IDENTIFIER ]* "}"
function-def ->  IDENTIFIER "::" FUNCTION-TYPE "=" block

----------------------------------------------end



ASSIGNMENT  ->  IDENTIFIER "::" type [ "=" expr ]?
VAR_UPDATE  ->  [IDENTIFIER | MEMBER_ACCESS]? UPDATE_OPERATOR expr


-- all valid types ----------------->

type -> number_type | string_type | char_type 
    | pointer_type
    | reference_type
    | array_type
    | record_type 

number_type -> "mut"? ["i8" | "i16" | "i32" | "i64" | "f32" | "f64" | "f128" | "u8" | "u16" | "u32"]
string_type -> "mut"? "string"
char_type   -> "mut"? "char"

pointer_type   -> "mut"? "*" type
reference_type -> "mut"? "@" type
array_type     -> "mut"? "[" SIZE "]" type
record_type    -> "mut"? IDENTIFIER

----------------------------------end

SIZE             -> [0-9]+
OPERATOR         -> "+" | "-" | "*"["*"]? | "/" | "%" | ">" ["=" | ">"]? | "<" ["=" | "<"]?  | "==" | "!" ["="]? 
UPDATE_OPERATOR  -> [ "+" | "-" | "*"["*"]? | "/" | "%" ]? "="
IDENTIFIER       -> [a-zA-Z][a-zA-Z0-9_]*
