Parser.zig
///// According to ./GrammarOrthodox
///////////////////////////////////////////////////////////////
///////////////////////// PARSER //////////////////////////////
///////////////////////////////////////////////////////////////


const StreamLexer = @import("./lexer.zig").StreamLexer;
const tokens = @import("./tokens.zig");
const Token = tokens.Token;
const token_id = tokens.token_id;

const std = @import("std");
const print = std.debug.print;

const AST = @import("./AST.zig");
const TYPES = AST.TYPES;
const LITERALS = AST.LITERALS;
const EXPRESSIONS = AST.EXPRESSIONS;
const OPERATORS = AST.OPERATORS;
const UPDATE_OPERATORS = AST.UPDATE_OPERATORS;
const STATEMENTS = AST.STATEMENTS;
const DEFINITIONS = AST.DEFINITIONS;

pub usingnamespace token_id;
pub usingnamespace TYPES;

const DEFAULT_INTEGER_TYPE_STRING = "i32";
const DEFAULT_FLOAT_TYPE_STRING   = "f64";

const errors = @import("./errors.zig");
const exit_with_msg = errors.exit_with_msg;

pub const Parser = struct {

    //
    // StreamLexer.next_token should be called till exhaustion
    stream_tokens: std.ArrayList(Token),
    current_token_idx: ?usize,

    //
    // c_headers and o_files can be used interchangeably
    // this information is recorded by the lexer already(./CompilerDirectives.zig)
    include_cheaders: std.ArrayList([]const u8),
    import_ofiles: std.ArrayList([]const u8),

    //
    // stream_tokens.items.len
    var LEN_STREAM_TOKENS: usize = undefined;

    const Self = @This();

    //
    // default allocator throughout the Parser,
    // deallocated only when program exits
    var gpa: std.heap.GeneralPurposeAllocator(.{}) = .{};
    const default_allocator = gpa.allocator();

    //
    // initialize with a filename to read
    // extract from StreamLexer to stream_tokens till exhaustion
    pub fn raw_init_with_file(filename: []const u8) Self {
        var lexer = StreamLexer.init_with_file(filename);
        var parser = Self {
            .stream_tokens = std.ArrayList(Token).init(Self.default_allocator),
            .current_token_idx = null,
            .include_cheaders = lexer.include_directives,
            .import_ofiles = lexer.import_directives,
        };

        while(true) {
            const token = lexer.next_token();
            parser.stream_tokens.append(token) catch @panic("Could not facilitate all tokens in stream_tokens\n");

            if(token.kind == .base_EOF) break;
        }

        Self.LEN_STREAM_TOKENS = parser.stream_tokens.items.len;
        return parser;
    }

    pub fn init_for_tests(source: []const u8) Self {
        var lexer = StreamLexer.raw_init(source, "");
        var parser = Self {
            .stream_tokens = std.ArrayList(Token).init(Self.default_allocator),
            .current_token_idx = null,
            .include_cheaders = lexer.include_directives,
            .import_ofiles = lexer.import_directives,
        };

        while(true) {
            const token = lexer.next_token();
            parser.stream_tokens.append(token) catch @panic("Could not facilitate all tokens in stream_tokens\n");

            if(token.kind == .base_EOF) break;
        }

        Self.LEN_STREAM_TOKENS = parser.stream_tokens.items.len;
        return parser;
    }


    /////////////////// PARSE-PROGRAM ///////////////////////// start ////////////////

    //
    // a program consists of a sequence of struct | enum | function definitions
    pub fn parse_program(self: *Self) std.ArrayList(DEFINITIONS) {

        var program = std.ArrayList(DEFINITIONS).init(Self.default_allocator);

        while(!self.expect_token(.base_EOF)) {

            var fn_inline = false;
            if(self.expect_token(.directive_inline)) {
                fn_inline = true;
                self.expect_advance_token(.directive_inline);
            }

            self.expect_advance_token(.base_identifier); // struct | enum | fn name
            self.expect_advance_token(.base_type_colon);


            const tok = self.peek_token();
            switch(tok.kind) {

                .keyword_struct =>
                {
                    self.putback_token(); // .base_type_colon
                    self.putback_token(); // struct_name

                    const struct_def = self.parse_struct_def();
                    program.append(struct_def) catch @panic("could not append struct_def to program");

                },

                .keyword_enum =>
                {
                    self.putback_token(); // .base_type_colon
                    self.putback_token(); // enum_name

                    const enum_def = self.parse_enum_def();
                    program.append(enum_def) catch @panic("could not append enum_def to program");

                },

                .keyword_function =>
                {
                    if(fn_inline) self.putback_token(); // #inline
                    self.putback_token(); // .base_type_colon
                    self.putback_token(); // fn_name

                    const fn_def = self.parse_fn_def();
                    program.append(fn_def) catch @panic("could not append fn_def to program");

                },

                else =>
                exit_with_msg(
                \\ .........parser-error (./Parser.zig)
                \\ .........encountered unrecognized definitions in program
                \\ .........diagnostics:: 
                \\ .........
                \\ .........only struct, enum, function definitions are recognized in a program
                \\ .........read definition grammar at (./GrammarOrthodox)
                ),

            }

            fn_inline = false;


        }

        return program;

    }

    /////////////////// PARSE-PROGRAM ///////////////////////// end //////////////////


    //
    // All types are parsed here
    pub fn parse_type(self: *Self) *TYPES { // VERIFIED

        // To keep *TYPES valid even after returning from function
        const return_type_ptr = Self.default_allocator.create(TYPES) catch @panic("Unable to allocate memory in parse_type\n");

        var this_type: TYPES = undefined;

        var type_is_mut = false;
        if(self.expect_token(.keyword_mut)) {
            type_is_mut = true;
            self.advance_token();
        }

        const tok = self.peek_token();
        switch(tok.kind) {



            ////////////////////// NUMBERS ////////////////////// start //

            .type_i8 => {
                this_type = TYPES {
                    .number = .{
                        .focused_type = "i8",
                        .mut = type_is_mut,
                    }
                };
            },

            .type_i16 => {
                this_type = TYPES {
                    .number = .{
                        .focused_type = "i16",
                        .mut = type_is_mut,
                    }
                };
            },

            .type_i32 => {
                this_type = TYPES {
                    .number = .{
                        .focused_type = "i32",
                        .mut = type_is_mut,
                    }
                };
            },

            .type_i64 => {
                this_type = TYPES {
                    .number = .{
                        .focused_type = "i64",
                        .mut = type_is_mut,
                    }
                };
            },

            .type_int => {
                this_type = TYPES {
                    .number = .{
                        .focused_type = "int",
                        .mut = type_is_mut,
                    }
                };
            },

            .type_u8 => {
                this_type = TYPES {
                    .number = .{
                        .focused_type = "u8",
                        .mut = type_is_mut,
                    }
                };
            },

            .type_u16 => {
                this_type = TYPES {
                    .number = .{
                        .focused_type = "u16",
                        .mut = type_is_mut,
                    }
                };
            },

            .type_u32 => {
                this_type = TYPES {
                    .number = .{
                        .focused_type = "u32",
                        .mut = type_is_mut,
                    }
                };
            },

            .type_f32 => {
                this_type = TYPES {
                    .number = .{
                        .focused_type = "f32",
                        .mut = type_is_mut,
                    }
                };
            },

            .type_f64 => {
                this_type = TYPES {
                    .number = .{
                        .focused_type = "f64",
                        .mut = type_is_mut,
                    }
                };
            },

            .type_f128 => {
                this_type = TYPES {
                    .number = .{
                        .focused_type = "f128",
                        .mut = type_is_mut,
                    }
                };
            },

            ////////////////////// NUMBERS ///////////////////////// end /




            .type_char => {
                this_type = TYPES {
                    .char = .{
                        .mut = type_is_mut,
                    }
                };
            },

            .type_string => {
                this_type = TYPES {
                    .string = .{
                        .mut = type_is_mut,
                    }
                };
            },

            .type_void => {
                this_type = TYPES {
                    .void = .{
                        .mut = type_is_mut,
                    }
                };
            },


            ///////////////// PTR, REF, ARRAYS  ////////////////// start /

            .type_pointer => { // pointer type
                // in cases we have know that peek'ing token returns a fixed token, we call advance_token instead of expect_advance_token
                self.advance_token();

                this_type = TYPES {
                    .pointer = .{
                        .ptr_to = self.parse_type(), // after calling parse_type call putback_token ~ parse_type advance_token' before returning
                        .mut = type_is_mut,
                    }
                };

                self.putback_token();
            },

            .type_reference => {
                self.advance_token();

                this_type = TYPES {
                    .reference = .{
                        .reference_to = self.parse_type(),
                        .mut = type_is_mut,
                    }
                };

                self.putback_token();
            },

            .base_left_bracket => { // array types
                self.advance_token();

                var size: ?[]const u8 = null;

                // arrays can not have expressions as part of their types
                // number :: [1 + (2-3 ** (2 == 0))]i32 = {}
                // does not work for obvious reasons
                //
                // checking: "mut"? "[" SIZE "]" LONELY_TYPE
                if(self.expect_token(.literal_number)) {
                    size = self.peek_token().lexeme.?;
                    self.advance_token();
                }

                if(self.expect_token(.base_right_bracket) == false) {
                    exit_with_msg(
                    \\ .........parser-error (./Parser.zig)
                    \\ .........array type is not properly defined
                    \\ .........diagnostics::
                    \\ .........
                    \\ .........unterminated '[' in array_type
                    \\ .........recognized array_types realize the form in (./GrammarOrthodox)
                    \\ .........array_type -> "mut"? "[" SIZE "]" type
                    );
                }

                self.advance_token();

                this_type = TYPES {
                    .array = .{
                        .len = size,
                        .lonely_type = self.parse_type(),
                        .mut = type_is_mut,
                    }
                };

                self.putback_token();
            },

            ///////////////// PTR, REF, ARRAYS  //////////////////// end /





            //////////////// STRUCT, ENUMS (RECORDS) ///////////// start ///

            .base_identifier => {
                const record_name = tok.lexeme.?;

                this_type = TYPES {
                    .record = .{
                        .record_name = record_name,
                        .mut = type_is_mut,
                    }
                };
            },

            //////////////// STRUCT, ENUMS (RECORDS) //////////////// end///



            ///////////// FUNCTION TYPES ////////////////////////// start //

            .keyword_function => {

                self.expect_advance_token(.keyword_function);
                self.expect_advance_token(.base_left_paren);

                var args_and_types = std.StringHashMap(*TYPES).init(Self.default_allocator);

                var no_args = true;

                while(true) {
                    if(self.expect_token(.base_right_paren)) {
                        self.expect_advance_token(.base_right_paren);
                        break;
                    }

                    const arg_name = self.peek_token().lexeme.?;
                    self.expect_advance_token(.base_identifier);

                    self.expect_advance_token(.base_type_colon);

                    const arg_type = self.parse_type();

                    no_args = false;
                    args_and_types.put(arg_name, arg_type) catch @panic("could not put to args_and_types in parse_types\n");

                    if(!self.expect_token(.base_comma)) {
                        self.expect_advance_token(.base_right_paren);
                        break;
                    }

                    self.expect_advance_token(.base_comma);

                }

                const fn_return_type = self.parse_type();
                self.putback_token();

                if(no_args) {
                    this_type = TYPES {
                        .function = .{
                            .args_and_types = null,
                            .return_type = fn_return_type,
                        }
                    };
                } else {
                    this_type = TYPES {
                        .function = .{
                            .args_and_types = args_and_types,
                            .return_type = fn_return_type,
                        }
                    };

                }



            },

            ///////////// FUNCTION TYPES ////////////////////////// end ////

            else => {
                exit_with_msg(
                \\ .........parser-error (./Parser.zig)
                \\ .........unrecognized token
                \\ .........diagnostics::
                \\ .........
                \\ .........received unrecognized token involved in a certain type
                );
            },
        }

        self.advance_token();
        return_type_ptr.* = this_type;
        return return_type_ptr;

    }

    //
    // literals may appear in an expression
    // Parses all literals
    pub fn parse_literals(self: *Self) LITERALS {  // VERIFIED
        var return_literal: LITERALS = undefined;

        const tok = self.peek_token();
        switch(tok.kind) {

            .literal_number => {
                return_literal = LITERALS {
                    .number = .{
                        .inner_value = tok.lexeme.?,
                        .number_type_name = DEFAULT_INTEGER_TYPE_STRING,
                    }
                };
            },

            .literal_float => {
                return_literal = LITERALS {
                    .number = .{
                        .inner_value = tok.lexeme.?,
                        .number_type_name = DEFAULT_FLOAT_TYPE_STRING,
                    }
                };
            },

            .literal_string => {
                return_literal = LITERALS {
                    .string = .{
                        .inner_value = tok.lexeme.?,
                    }
                };
            },

            .literal_char => {
                return_literal = LITERALS {
                    .char = .{
                        .inner_value = tok.lexeme.?
                    }
                };
            },

            .base_identifier => {

                // check if this is a variable, or a struct/record member access
                self.advance_token();
                if(self.expect_token(.base_dot) == false) {
                    // normal variable
                    // undo the effect of the above advance_token
                    self.putback_token();

                    return_literal = LITERALS {
                        .variable = .{
                            .inner_value = tok.lexeme.?,
                        }
                    };

                } else {
                    // struct/enum member access
                    self.expect_advance_token(.base_dot);

                    var member_names = std.ArrayList([]const u8).init(Self.default_allocator);

                    while(true) {
                        const field_name = self.peek_token();
                        if(self.expect_token(.base_identifier) == false) {
                            exit_with_msg(
                            \\ .........parser-error (./Parser.zig)
                            \\ .........in member name access
                            \\ .........diagnostics::
                            \\ .........
                            \\ .........expected IDENTIFIER after '.' token in struct/enum member access
                            \\ .........member access is of form - (./GrammarOrthodox)
                            \\ .........member_access ->  IDENTIFIER [ "." IDENTIFIER ]+
                            );
                        }


                        member_names.append(field_name.lexeme.?) catch @panic("could not extend member_names std.ArrayList in parse_literals\n");
                        self.advance_token();

                        if(self.expect_token(.base_dot) == false) break;
                        self.advance_token();
                    }

                    // putback here, only because at end of this function we always advance_token
                    self.putback_token();

                    return_literal = LITERALS {
                        .member_access = .{
                            .record_type_name = tok.lexeme.?,
                            .members_name_in_order = member_names,
                        }
                    };
                }
            },


            // pointer dereference
            // like so, ^LITERAL
            .type_pointer => {
                self.expect_advance_token(.type_pointer);

                const literal_ptr = Self.default_allocator.create(LITERALS) catch @panic("Unable to allocate memory to literal_ptr in parse_literals\n");
                literal_ptr.* = self.parse_literals();

                self.putback_token();

                return_literal = LITERALS {
                    .pointer_deref = .{
                        .deref_literal = literal_ptr,
                    },
                };

            },

            // variable reference
            // like so, @LITERAL
            .type_reference => {
                self.expect_advance_token(.type_reference);

                const literal_ptr = Self.default_allocator.create(LITERALS) catch @panic("Unable to allocate memory to literal_ptr in parse_literals\n");
                literal_ptr.* = self.parse_literals();

                self.putback_token();

                return_literal = LITERALS {
                    .variable_ref = .{
                        .ref_literal = literal_ptr,
                    },
                };
            },

            else => {
                exit_with_msg(
                \\ .........parser-error (./Parser.zig)
                \\ .........wrong literal type received
                \\ .........diagnostics::
                \\ .........
                \\ .........unrecognized literal type received
                \\ .........recognized types : (./AST.zig)
                \\ .........number, char, string, array, struct/enum member access, variables, pointer deref, array ref, array access
                );
            },
        }

        // check if followed by array-access syntax
        self.advance_token();

        const array_var = Self.default_allocator.create(LITERALS) catch @panic("unable to allocate memory in parse_literals\n");
        if(self.expect_token(.base_left_bracket)) { // array-access
            array_var.* = return_literal;

            self.expect_advance_token(.base_left_bracket);

            const access_index = self.parse_expr(); // parse_expr consumes ']'

            return_literal = LITERALS {
                .array_access = .{
                    .array_var = array_var,
                    .access_index = access_index,
                }
            };
        }

        return return_literal;
    }


    /////////////////// RECORDS - AND - FUNCTION DEFINITIONS /////// start ///

    pub fn parse_struct_def(self: *Self) DEFINITIONS {

        const struct_name = self.peek_token().lexeme.?;
        self.expect_advance_token(.base_identifier);

        self.expect_advance_token(.base_type_colon);
        self.expect_advance_token(.keyword_struct);

        // self.expect_advance_token(.base_assign);
        self.expect_advance_token(.base_left_braces);

        var fields_types = std.StringHashMap(*TYPES).init(Self.default_allocator);

        var is_struct_empty = true;
        while(true) {
            if(self.expect_token(.base_right_braces)) {
                self.expect_advance_token(.base_right_braces);
                break;
            }

            const field_name = self.peek_token().lexeme.?;
            self.expect_advance_token(.base_identifier);

            self.expect_advance_token(.base_type_colon);
            const field_type = self.parse_type();

            self.expect_advance_token(.base_comma);

            is_struct_empty = false;
            fields_types.put(field_name, field_type) catch @panic("can not append to fields_types in parse_struct_def\n");

        }

        if(is_struct_empty) {
            exit_with_msg(
            \\ .........parser-error (./Parser.zig)
            \\ .........struct empty
            \\ .........diagnostics::
            \\ .........
            \\ .........struct defined with no fields
            );
        } 

        if(!self.expect_token(.base_semicolon)) {
            exit_with_msg(
            \\ .........parser-error (./Parser.zig)
            \\ .........expected semicolon after struct definition
            \\ .........diagnostics::
            \\ .........
            \\ .........struct, enum, fn, definitions require ';' at end
            \\ .........in (./GrammarOrthodox)
            \\ .........struct-def  ->  IDENTIFIER "::" "struct" "=" "{" [ IDENTIFIER "::" TYPE ]* "}" ";"
            );

        }

        self.expect_advance_token(.base_semicolon);

        return DEFINITIONS {
            .struct_def = .{
                .struct_name = struct_name,
                .fields_types = fields_types,
            }
        };


    }

    pub fn parse_enum_def(self: *Self) DEFINITIONS {

        const enum_name = self.peek_token().lexeme.?;
        self.expect_advance_token(.base_identifier);

        self.expect_advance_token(.base_type_colon);
        self.expect_advance_token(.keyword_enum);

        // self.expect_advance_token(.base_assign);
        self.expect_advance_token(.base_left_braces);

        var fields = std.ArrayList([]const u8).init(Self.default_allocator);

        var enum_is_empty = true;
        while(true) {
            if(self.expect_token(.base_right_braces)) {
                self.expect_advance_token(.base_right_braces);
                break;
            }

            const field_name = self.peek_token().lexeme.?;
            self.expect_advance_token(.base_identifier);

            enum_is_empty = false;
            fields.append(field_name) catch @panic("could not append to field_names in parse_enum_def\n");

            self.expect_advance_token(.base_comma);
        }

        if(enum_is_empty) {
            exit_with_msg(
            \\ .........parser-error (./Parser.zig)
            \\ .........enun empty
            \\ .........diagnostics::
            \\ .........
            \\ .........enum defined with no fields
            );
        } 

        if(!self.expect_token(.base_semicolon)) {
            exit_with_msg(
            \\ .........parser-error (./Parser.zig)
            \\ .........expected semicolon after enum definition
            \\ .........diagnostics::
            \\ .........
            \\ .........enum, struct, fn, definitions require ';' at end
            \\ .........in (./GrammarOrthodox)
            \\ .........enum-def  ->  IDENTIFIER "::" "enum" "=" "{" [ IDENTIFIER ]* "}" ";"
            );
        }

        self.expect_advance_token(.base_semicolon);

        return DEFINITIONS {
            .enum_def = .{
                .enum_name = enum_name,
                .fields = fields,
            }
        };


    }

    pub fn parse_fn_def(self: *Self) DEFINITIONS {

        var fn_inline = false;
        if(self.peek_token().kind == .directive_inline) {
            fn_inline = true;
            self.expect_advance_token(.directive_inline);
        } 

        const fn_name = self.peek_token().lexeme.?;
        self.expect_advance_token(.base_identifier);

        self.expect_advance_token(.base_type_colon);

        const fn_type = self.parse_type();

        // self.expect_advance_token(.base_assign);

        const fn_block = self.parse_block();

        if(!self.expect_token(.base_semicolon)) {
            exit_with_msg(
            \\ .........parser-error (./Parser.zig)
            \\ .........expected semicolon after function definition
            \\ .........diagnostics::
            \\ .........
            \\ .........fn, struct, enum, definitions require ';' at end
            \\ .........in (./GrammarOrthodox)
            \\ .........function-def ->  IDENTIFIER "::" FUNCTION-TYPE "=" block ";"
            );
        }

        self.expect_advance_token(.base_semicolon);

        return DEFINITIONS {
            .function_def = .{
                .fn_name = fn_name,
                .fn_type = fn_type,
                .fn_block = fn_block,

                .fn_inline = fn_inline,
            }
        };

    }

    /////////////////// RECORDS - AND - FUNCTION DEFINITIONS /////// end /////





    //////////////////////// SUB-EXPRESSIONS /////////////////////// start ///

    pub fn parse_literal_expr(self: *Self) *EXPRESSIONS {
        const literal_expr_ptr = Self.default_allocator.create(EXPRESSIONS) catch @panic("Unable to allocate memory in parse_literal_expr\n");

        literal_expr_ptr.* = EXPRESSIONS {
            .literal_expr = .{
                .inner_literal = self.parse_literals(),
                .inner_expr = self.parse_expr(),
            }
        };


        return literal_expr_ptr;

    }

    pub fn parse_op_expr(self: *Self) *EXPRESSIONS {
        const op_expr_ptr = Self.default_allocator.create(EXPRESSIONS) catch @panic("Unable to allocate memory in parse_op_expr\n");

        if(!self.peek_is_operator()) {
            exit_with_msg(
            \\ .........parser-error (./Parser.zig)
            \\ .........expected operator
            \\ .........diagnostics::
            \\ .........
            \\ .........recognized operator_expr(op_expr in ./AST.zig), but did not recognize operator
            );
          
        }

        var operator: OPERATORS = undefined;

        const tok = self.peek_token();
        switch(tok.kind) {
            .base_add => {
                operator = OPERATORS.ADD;
            },

            .base_sub => {
                operator = OPERATORS.MINUS;
            },

            .base_div => {
                operator = OPERATORS.DIVIDE;
            },

            .base_mul => {
                operator = OPERATORS.MULTIPLY;
            },

            .base_mod => {
                operator = OPERATORS.MOD;
            },

            .base_exp  => {
                operator = OPERATORS.EXP;
            },

            .base_left_shift => {
                operator = OPERATORS.LEFT_SHIFT;
            },

            .base_right_shift => {
                operator = OPERATORS.RIGHT_SHIFT;
            },

            .base_bitwise_and => {
                operator = OPERATORS.BITWISE_AND;
            },

            .base_bitwise_or => {
                operator = OPERATORS.BITWISE_OR;
            },

            .keyword_and => {
                operator = OPERATORS.AND;
            },

            .keyword_or => {
                operator = OPERATORS.OR;
            },

            .base_lt => {
                operator = OPERATORS.LT;
            },

            .base_gt => {
                operator = OPERATORS.GT;
            },

            .base_le => {
                operator = OPERATORS.LE;
            },

            .base_ge => {
                operator = OPERATORS.GE;
            },

            .base_equal => {
                operator = OPERATORS.EQUAL;
            },

            .base_not_equal => {
                operator = OPERATORS.NON_EQUAL;
            },

            else =>
            exit_with_msg(
            \\ .........parser-error (./Parser.zig)
            \\ .........expected operator
            \\ .........diagnostics::
            \\ .........
            \\ .........recognized operator_expr(op_expr in ./AST.zig), but did not recognize operator
            ),

        }

        self.advance_token();

        op_expr_ptr.* = EXPRESSIONS {
            .operator_expr = .{
                .inner_operator = operator,
                .inner_expr = self.parse_expr(),
            }
        };

        return op_expr_ptr;

    }

    pub fn parse_fn_call_expr(self: *Self) *EXPRESSIONS {
        const fn_expr_ptr = Self.default_allocator.create(EXPRESSIONS) catch @panic("Unable to allocate memory in parse_fn_call_expr\n");

        const fn_name = self.peek_token().lexeme.?;
        self.expect_advance_token(.base_identifier);
        self.expect_advance_token(.base_left_paren);

        var arg_list = std.ArrayList(*EXPRESSIONS).init(Self.default_allocator);

        while(true) {
            if(self.expect_token(.base_right_paren)) {
                self.expect_advance_token(.base_right_paren);
                break;
            }

            const arg = self.parse_expr();
            arg_list.append(arg) catch @panic("could not append to arg_list in parse_fn_call_expr\n");

            self.putback_token(); // parse_expr consumes both ',' and ')', when ')' is consumed, putback that token
            if(self.expect_token(.base_right_paren)) {
                self.expect_advance_token(.base_right_paren);
                break;
            }

            self.advance_token();
        }

        fn_expr_ptr.* = EXPRESSIONS {
            .fn_call_expr = .{
                .fn_name = fn_name,
                .inner_expr_list = arg_list,
                .then_expr = self.parse_expr(),
            }
        };

        return fn_expr_ptr;
    }

    pub fn parse_return_expr(self: *Self) *EXPRESSIONS {
        const return_expr_ptr = Self.default_allocator.create(EXPRESSIONS) catch @panic("Unable to allocate memory in parse_return_expr\n");

        self.expect_advance_token(.keyword_return);

        return_expr_ptr.* = EXPRESSIONS {
            .return_expr = .{
                .inner_expr = self.parse_expr(),
            }
        };

        return return_expr_ptr;

    }

    pub fn parse_cast_expr(self: *Self) *EXPRESSIONS {
        const return_expr_ptr = Self.default_allocator.create(EXPRESSIONS) catch @panic("Unable to allocate memory in parse_cast_expr\n");

        self.expect_advance_token(.directive_cast);

        self.expect_advance_token(.base_left_paren);

        const cast_type = self.parse_type();

        self.expect_advance_token(.base_right_paren);


        return_expr_ptr.* = EXPRESSIONS {
            .casted_expr = .{
                .inner_expr = self.parse_expr(),
                .cast_to = cast_type.*,
            }
        };

        return return_expr_ptr;
    }

    //
    // closed-expr are under paren ~ (a + b - (c ** d))
    // for expressions like ((x + y) + z) you might have to call this twice
    pub fn parse_closed_expr(self: *Self) *EXPRESSIONS {
        const closed_expr_ptr = Self.default_allocator.create(EXPRESSIONS) catch @panic("Unable to allocate memory in parse_closed_expr\n");

        self.expect_advance_token(.base_left_paren);
        closed_expr_ptr.* = EXPRESSIONS {
            .closed_expr = .{
                .inner_expr = self.parse_expr(),
            }
        };

        return closed_expr_ptr;

    }

    var NO_OF_PAREN_IN_CLOSED_EXPR : i32 = 0;

    //
    // right side may only contain struct creation, and nothing else
    // struct_init require ',' after every field
    pub fn parse_struct_init_expr(self: *Self) *EXPRESSIONS {
        const struct_expr_ptr = Self.default_allocator.create(EXPRESSIONS) catch @panic("Unable to allocate memory in parse_struct_init_expr\n");
        var fields_values = std.StringHashMap(*EXPRESSIONS).init(Self.default_allocator);

        const struct_name = self.peek_token().lexeme.?;
        self.expect_advance_token(.base_identifier);
        self.expect_advance_token(.base_left_braces);

        while(true) {
            if(self.expect_token(.base_right_braces))  {
                self.expect_advance_token(.base_right_braces);
                break;
            }

            self.expect_advance_token(.base_dot);
            const field_name = self.peek_token().lexeme.?;
            self.expect_advance_token(.base_identifier);

            self.expect_advance_token(.base_assign);

            const field_value = self.parse_expr();
            switch(field_value.*) { // if a field inside a struct is init with a struct-def, '}' of that struct-def is used as delimiter for that struct ending, but we require, .base_comma after every field
                .struct_expr =>
                self.expect_advance_token(.base_comma),

                else =>
                {}
            }


            fields_values.put(field_name, field_value) catch @panic("could not 'put' to fields_values in parse_struct_init_expr\n");

            if(self.expect_token(.base_comma)) self.expect_advance_token(.base_comma);

        }

        self.expect_advance_token(.base_semicolon);

        struct_expr_ptr.* = EXPRESSIONS {
            .struct_expr = .{
                .struct_name = struct_name,
                .fields_values = fields_values,
            }
        };

        return struct_expr_ptr;
    }

    //////////////////////// SUB-EXPRESSIONS /////////////////////// end  ////





    /////////////////////// EXPRESSIONS /////////////////////////// start ///


    //
    // parses expressions without consuming last token
    pub fn parse_expr(self: *Self) *EXPRESSIONS {
        var expr_ptr = Self.default_allocator.create(EXPRESSIONS) catch @panic("Unable to allocate memory in parse_closed_expr\n");
        expr_ptr.* = EXPRESSIONS.NULL;


        const tok = self.peek_token();
        switch(tok.kind) {

            .literal_number, .literal_float, .literal_char, .literal_string, .type_pointer, .type_reference =>
            {
                expr_ptr  = self.parse_literal_expr();
            },

            .base_identifier => // could be fn_call or literal_expr or struct_init_expr
            {

                self.expect_advance_token(.base_identifier); // first skip id-name, if '(' appears, it is a fn_call expr
                if(self.expect_token(.base_left_paren)) { // fn_call expr
                    self.putback_token();
                    expr_ptr = self.parse_fn_call_expr();
                } else if(self.expect_token(.base_left_braces)) { // struct_init_expr
                    self.putback_token();
                    expr_ptr = self.parse_struct_init_expr();
                } else { // literal_expr
                    self.putback_token();
                    expr_ptr = self.parse_literal_expr();
                }

            },

            .keyword_return =>
            {
                expr_ptr = self.parse_return_expr();
            },

            .base_left_paren =>
            {
                expr_ptr = self.parse_closed_expr();
            },

            .base_right_paren =>
            {
                self.expect_advance_token(.base_right_paren);

                // uncommenting this breaks fn_call_expr
                // if(self.peek_is_operator()) expr_ptr = self.parse_expr();
            },

            .base_add, .base_sub,
            .base_div, .base_mul,
            .base_exp, .base_mod,
            .base_equal, .base_not_equal,
            .base_lt, .base_gt,
            .base_le, .base_ge,
            .base_left_shift, .base_right_shift,
            .base_bitwise_and, .base_bitwise_or,
            .keyword_and, .keyword_or =>
            {
                expr_ptr = self.parse_op_expr();
            },

            // break cases
            .base_semicolon,  // ends stuff like a = 1 + 2 + 3;
            .base_comma, // in functions ~ add(1, b)
            .base_left_braces => // in stmts, like if 1 + 2 + 3 > 0 { .. }
            self.advance_token(),

            .base_colon => // in for-statement ~ for ID in EXPR ":" EXPR ..
            self.advance_token(),

            .base_right_bracket => // access array
            self.advance_token(),

            .directive_cast =>
            expr_ptr = self.parse_cast_expr(),

            else => 
            {
                print(" .........got {any}\n", .{tok.kind});
                exit_with_msg(
                \\ .........parser-error (./Parser.zig)
                \\ .........unexpected token
                \\ .........diagnostics::
                \\ .........
                \\ .........expected expression, but did not recognize token(./AST.zig)
                );
            }

        }

        return expr_ptr;

    }

    /////////////////////// EXPRESSIONS /////////////////////////// end /////



    //////////////////////// LOOP /////////////////////////// start ///


    pub fn parse_for_stmt(self: *Self) *STATEMENTS {

        self.expect_advance_token(.keyword_for);
        if(!self.expect_token(.base_identifier)) { 
            exit_with_msg(
            \\ .........parser-error (./Parser.zig)
            \\ .........expected IDENTIFIER in for-loop
            \\ .........diagnostics::
            \\ .........
            \\ .........for-loop adhere to this pattern - (./GrammarOrthodox)
            \\ .........for IDENTIFIER in EXPR1 : EXPR2 : BLOCK
            );
        }

        const identifier_name = self.peek_token().lexeme.?;
        self.expect_advance_token(.base_identifier);
